added booking details api endpoint
