# laas_api_documentation.yaml
@@ -115,6 +115,29 @@ paths:
           description: Cannnot cancel booking
         '401':
           description: Unauthorized API key
+  '/booking/{bookingID}/details':
+    get:
+      tags:
+        - Bookings
+      summary: Get booking details
+      description: ''
+      operationID: bookingDetails
+      parameters:
+        - in: path
+          name: bookingID
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Booking'
+        '404':
+          description: Booking does not exist
+        '401':
+          description: Unauthorized API key
   '/booking/{bookingID}/extendBooking/{days}':
     post:
       tags:
